--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Number Guessing Game</title>
+  
   
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <h1>Number Guessing Game</h1>
 
   
   <label for="inputBtn">Enter your guess (1-20):</label>
